Solved the register issue

--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -4,6 +4,6 @@
 
     	<div class="alert alert-info" >
 
-    		An Email has been snet with instructions to rest your password ! Check your Inbox !!
+    		An Email has been sent with instructions to reset your password ! Check your Inbox !!
 		</div>
 {% endblock content %}
