Added breadcrumbs for easy navigation

--- a/notes/templates/notes/notes_confirm_delete.html
+++ b/notes/templates/notes/notes_confirm_delete.html
@@ -1,5 +1,10 @@
 {% extends "notes/base.html" %}
 
+{% block note_detail_link %}
+<a class="nav-item nav-link" href="#">Delete Note {{object.title}}</a>
+{% endblock %}
+
+
 {% block content %}
 
     	<div class="content-section">
