--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -15,28 +15,29 @@
 </head>
 <body>
    <header class="site-header">
- <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-   <div class="container">
-	 <a class="navbar-brand mr-4" href="{% url 'note-home' %}">ENotes</a>
-	 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-	 <span class="navbar-toggler-icon"></span>
-	 </button>
-	 <div class="collapse navbar-collapse" id="navbarToggle">
-	   <div class="navbar-nav mr-auto">
-		 <a class="nav-item nav-link" href="{% url 'note-home' %}">Home</a>
-	   </div>
-	   <!-- Navbar Right Side -->
-	   <div class="navbar-nav" >
-		 {% if user.is_authenticated %}
+	   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+   			<div class="container">
+	 			<a class="navbar-brand mr-4" href="{% url 'note-home' %}">ENotes</a>
+	 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+	 			<span class="navbar-toggler-icon"></span>
+	 			</button>
+	 			<div class="collapse navbar-collapse" id="navbarToggle">
+					<div class="navbar-nav mr-auto">
+								<a class="nav-item nav-link" href="{% url 'note-home' %}">Home</a>
+								{% block note_detail_link %}
 
+								{% endblock %}
+						</div>
+					</div>
+	   			<!-- Navbar Right Side -->
+	   			<div class="navbar-nav" >
+		 		{% if user.is_authenticated %}
+			 		{% if request.user.is_superuser %}
+						<a class="nav-item nav-link" href="{% url 'admin:index' %}">Go to Admin</a>
 
-			 {% if request.user.is_superuser %}
-
-			<a class="nav-item nav-link" href="{% url 'admin:index' %}">Go to Admin</a>
-
-			 {% endif %}
-			 <a class="nav-item nav-link" href="{% url 'notes-create' %}">Add New Notes</a>
-			 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+			 		{% endif %}
+			 		<a class="nav-item nav-link" href="{% url 'notes-create' %}">Add New Notes</a>
+			 		<a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
 		 {% else %}
 			 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
 			 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
