--- a/notes/templates/notes/main.html
+++ b/notes/templates/notes/main.html
@@ -32,8 +32,7 @@
 
           {% else %}
               <a class="nav-item nav-link" style = "color: #cbd5db;" href="{% url 'login' %}">Login</a>
-              <a class="nav-item nav-link" style = "color: #cbd5db;"
-               href="{% url 'register' %}">Register</a>
+              <a class="nav-item nav-link" style = "color: #cbd5db;" href="{% url 'register' %}">Register</a>
           {% endif %}
         </div>
       </div>
