--- a/notes/templates/notes/notes_detail.html
+++ b/notes/templates/notes/notes_detail.html
@@ -1,4 +1,9 @@
 {% extends "notes/base.html" %}
+
+{% block note_detail_link %}
+<a class="nav-item nav-link" href="#">{{object.title}}</a>
+{% endblock %}
+
 {% block content %}
       <article class="media content-section">
   <div class="media-body">
