--- a/notes/templates/notes/notes_form.html
+++ b/notes/templates/notes/notes_form.html
@@ -2,13 +2,27 @@
 
 {% load crispy_forms_tags %}
 
+{% block note_detail_link %}
+{% if object.title %}
+	<a class="nav-item nav-link" href="#">Update {{object.title}}</a>
+{% else %}
+	<a class="nav-item nav-link" href="#">New Note</a>
+{% endif %}
+
+{% endblock %}
+
+
 {% block content %}
 
     	<div class="content-section">
     		<form method="post">
     			{% csrf_token %}
     			<fieldset class="form-group">
-    				<legend class ="border-bottom mb-4">New Notes</legend>
+					{% if object.title %}
+    						<legend class ="border-bottom mb-4">{{object.title}}</legend>
+					{% else %}
+							<legend class ="border-bottom mb-4">New Note</legend>
+					{% endif %}
     				{{form|crispy }}
     			</fieldset>
     			<div class = "form-group">
